# cgroup-rts-threads

./: .gitignore  CHANGELOG.md  README.md  cgroup-capabilities.cabal  cgroup-rts-threads.cabal
.github/workflows/: build.yml  tests.yml
src/Control/Concurrent/: CGroup.hs
src/System/: CGroup.hs
src/System/CGroup/: CPU.hs  Controller.hs  Types.hs
src/System/CGroup/Controller/: Internal.hs
src/System/CGroup/V1/: CPU.hs  Controller.hs
src/System/CGroup/V2/: CGroup.hs  CPU.hs
test/: Main.hs
test/System/CGroup/: CPUSpec.hs  ControllerSpec.hs  TypesSpec.hs
test/System/CGroup/V1/: CPUSpec.hs  ControllerSpec.hs
test/System/CGroup/V2/: CGroupSpec.hs  CPUSpec.hs
test/System/CGroup/V2/testdata-cgroup/nested/: cgroup
test/System/CGroup/V2/testdata-cgroup/root/: mountinfo
test/System/CGroup/V2/testdata-cpu/limited/: cpu.max
test/System/CGroup/V2/testdata-cpu/limited/bigger/: cpu.max
test/System/CGroup/V2/testdata-cpu/limited/unlimited/: cpu.max
