cabal-version:      3.0
name:               cgroup-capabilities
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:           https://github.com/cnr/cgroup-capabilities

-- A URL where users can report bugs.
-- bug-reports:
license:            MPL-2.0
license-file:       LICENSE
author:             Connor James
maintainer:         connornjames@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common lang
  default-language:   Haskell2010
  default-extensions:
    OverloadedStrings
    ImportQualifiedPost
    ScopedTypeVariables

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wcompat
    -Wincomplete-record-updates -Wmissing-home-modules
    -Wmissing-export-lists -Wredundant-constraints

library
  import:          lang

  -- cabal-fmt: expand src
  exposed-modules:
    Control.Concurrent.CGroup
    System.CGroup
    System.CGroup.CPU
    System.CGroup.Types

  build-depends:
    , base        ^>=4.14.3.0
    , megaparsec
    , path
    , text

  hs-source-dirs:  src

test-suite test
  import:         lang
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  other-modules:
    System.CGroup.CPUSpec
    System.CGroup.TypesSpec

  build-depends:
    , base                 ^>=4.14.3.0
    , cgroup-capabilities
    , path
    , path-io
    , sandwich
