cabal-version:      3.0
name:               cgroup-capabilities
version:            0.1.0.0
synopsis:
  A container-/cgroup-aware replacement for the GHC RTS `-N` flag

description:
  A container-/cgroup-aware replacement for the GHC RTS `-N` flag. See the README for details.

homepage:           https://github.com/cnr/cgroup-capabilities
license:            MPL-2.0
license-file:       LICENSE
author:             Connor James
maintainer:         connornjames@gmail.com
extra-source-files:
  CHANGELOG.md
  README.md

common lang
  default-language:   Haskell2010
  default-extensions:
    OverloadedStrings
    ScopedTypeVariables

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wcompat
    -Wincomplete-record-updates -Wmissing-home-modules
    -Wmissing-export-lists -Wredundant-constraints

library
  import:          lang

  -- cabal-fmt: expand src
  exposed-modules:
    Control.Concurrent.CGroup
    System.CGroup
    System.CGroup.CPU
    System.CGroup.Types

  build-depends:
    , base        >=4.13 && <5
    , megaparsec  >=8    && <10
    , path        >=0.7  && <0.10
    , text

  hs-source-dirs:  src

test-suite test
  import:         lang
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  other-modules:
    System.CGroup.CPUSpec
    System.CGroup.TypesSpec

  build-depends:
    , base
    , cgroup-capabilities
    , path
    , path-io
    , sandwich ^>=0.1.0.9
